# jetbrains-stem-cell-agent

./: .env.example  .gitignore  README.md  WRITEUP.md  pyproject.toml
benchmark/: manifest.yaml
benchmark/splits/: test.txt  train.txt  val.txt
benchmark/task_001/: issue.md  task.yaml
benchmark/task_001/repo/: parser_utils.py
benchmark/task_001/visible_tests/: test_parser_utils.py
benchmark/task_002/: issue.md  task.yaml
benchmark/task_002/repo/: math_ops.py
benchmark/task_002/visible_tests/: test_math_ops.py
benchmark/task_003/: issue.md  task.yaml
benchmark/task_003/repo/: list_utils.py
benchmark/task_003/visible_tests/: test_list_utils.py
benchmark/task_004/: issue.md  task.yaml
benchmark/task_004/repo/: config_utils.py
benchmark/task_005/: issue.md  task.yaml
benchmark/task_006/: issue.md  task.yaml
benchmark/task_007/: issue.md  task.yaml
benchmark/task_008/: issue.md  task.yaml
benchmark/task_009/: issue.md  task.yaml
benchmark/task_010/: issue.md  task.yaml
benchmark/task_011/: issue.md  task.yaml
benchmark/task_012/: issue.md  task.yaml
benchmark/task_013/: issue.md  task.yaml
benchmark/task_014/: issue.md  task.yaml
benchmark/task_015/: issue.md  task.yaml
benchmark/task_016/: issue.md  task.yaml
benchmark/task_017/: issue.md  task.yaml
benchmark/task_018/: issue.md  task.yaml
src/stem_agent/: __init__.py  agent.py  backends.py  benchmark.py  cli.py  evolution.py  jsonl.py  policy.py  runner.py  study.py
tests/: test_backends.py  test_benchmark.py  test_evolution.py  test_runner.py  test_study.py
(+47 files in other folders)
